feat: multi-agent foundations — AgentTool, cancellation, retry, SSE, events
Implements the 6 capabilities identified as missing for autonomous multi-agent systems:

## Nuevos ports
- `CancellationToken` — token thread-safe para detener un loop desde fuera
- `RetryPolicy` — política configurable de reintentos por tool
- `AgentRunner` — interfaz de puerto para agentes invocables
- `AgentRegistry` — registro de agentes por nombre

## Nuevas clases core
- `AgentTool` — envuelve un AgentRuntime como Tool (multi-agente in-process, sin HTTP)
- `LocalAgentRegistry` — implementación thread-safe del registro
- `DefaultRetryPolicy` — reintentos configurables (AGENT_RETRY_MAX, AGENT_RETRY_DELAY_MS)

## Modificaciones
- `AgentLoop` — soporte de cancelación por token + retry por tool
- `AgentRuntime` — implementa AgentRunner; acepta CancellationToken; name/description
- `ExecutionContext` — campo cancellationToken (backward-compat)
- `HttpAgentServer` — SSE streaming (/run/stream), cancelación (DELETE /cancel),
  cola de eventos asíncronos (POST /events) con soporte de callback_url
- `ApplicationBootstrap` — wiring de retry, AgentTool de sub-agentes, AGENT_NAME/DESC

## Docs
- `docs/multi-agent.md` — guía completa de topologías y configuración
- `TODO.md` — roadmap actualizado con estado de cada capacidad

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>